# lib-cc-converter

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: ci_pr.yml
crates/dfu/: Cargo.toml
crates/dfu-schema-define/: Cargo.toml
crates/dfu-schema-define/src/: gen.rs  lib.rs  parse.rs
crates/dfu-structures/: Cargo.toml
crates/dfu-structures/src/: lib.rs  types.rs
crates/dfu/src/: lib.rs
crates/dfu/src/schema/: mod.rs  v102.rs  v99.rs
crates/dfu/src/util/: mod.rs  v102_item_name.rs
resources/test/anvil2cc/: r.-1.1.mca
resources/test/anvil2cc/in/region/: r.-1.0.mca
resources/test/simple_region_test/: r.0.0.mca  r.0.1.mca
src/: dimension.rs  lib.rs
src/convert/: anvil2cc.rs  converter.rs  entry_location.rs  info_converter.rs  mod.rs  waiter.rs
src/convert/anvil2cc/: conv.rs  info.rs  mod.rs
src/convert/data/: anvil.rs  anvil_chunk_data.rs  cubic_chunks_1_12.rs  mod.rs
src/convert/data_fix/schema/: mod.rs  v99.rs
src/cursed/: mod.rs  types.rs  v99.rs
src/io/: anvil_region_reader.rs  anvil_region_writer.rs  cubic_chunks_writer.rs  cubic_region_writer.rs  mod.rs  region_reader.rs  region_writer.rs  write_region.rs
src/io/anvil/: reader.rs  writer.rs
src/io/cubic/: writer.rs
src/util/: aabb.rs  compress.rs  errors.rs  file.rs  math_util.rs  mod.rs  positions.rs  reinterpret.rs  test_utils.rs
src/util/vec/: mod.rs  vec2i.rs  vec3i.rs
