[package]
name = "cc-converter"
version = "0.1.0"
edition = "2021"

[profile.release]
panic="abort"

[dependencies]
flate2 = { version = "1.0.22", features = ["zlib-ng-compat"], default-features = false }
quartz_nbt = { version = "0.2.5" }
multiqueue = "0.3.2"
byteorder = "1.4.3"
lazy_static = "1.4.0"