[package]
name = "cc-converter"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true

[dependencies]
flate2 = { version = "1.0.22", features = ["zlib-ng-compat"], default-features = false }
quartz_nbt = { version = "0.2.5" }
multiqueue = "0.3.2"
byteorder = "1.4.3"
lazy_static = "1.4.0"
once_cell = "1.17.0"
regex = "1.7.1"
pathdiff = "0.2.1"