[package]
name = "dfu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dfu-schema-define = { path = "../dfu-schema-define" }
dfu-structures = { path = "../dfu-structures" }

lazy_static = "1.4.0"
quartz_nbt = { version = "0.2.5" }

